--- a/package.json
+++ b/package.json
@@ -33,7 +33,14 @@
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "babel-jest": "^23.4.2",
+    "eslint": "^3.19.0",
+    "eslint-config-react-app": "^0.2.1",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.10.3",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "react-scripts": "^1.1.4"
@@ -47,6 +54,9 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "main": "index.js"
 }
