--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "eslint-plugin-react": "^6.10.3",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^1.1.4",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss",
