--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-css-modules": "^4.7.6",
     "react-dom": "^16.4.2",
     "react-loadable": "^5.4.0",
+    "react-redux": "^5.0.7",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.4.2",
     "reactstrap": "^6.3.1",
+    "redux": "^4.0.0",
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
