--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "react-test-renderer": "^16.4.2",
     "reactstrap": "^6.3.1",
     "redux": "^4.0.0",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
